--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -8,11 +8,11 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+# play.crypto.secret = "changeme"
 
 # The application languages
 # ~~~~~
-play.i18n.langs = [ "en" ]
+# play.i18n.langs = [ "en" ]
 
 # Router
 # ~~~~~
@@ -26,17 +26,17 @@ play.i18n.langs = [ "en" ]
 # play.http.router = my.application.Routes
 
 #Configure Models
-ebean.default = ["models.*"]
+# ebean.default = ["models.*"]
 
 # Database configuration
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
- db.default.driver=org.h2.Driver
- db.default.url="jdbc:h2:mem:play"
- db.default.username=sa
- db.default.password=""
+# db.default.driver=org.h2.Driver
+# db.default.url="jdbc:h2:mem:play"
+# db.default.username=sa
+# db.default.password=""
 
 #Postgres
 #db.default.driver=org.postgresql.Driver
