Servico de lista, login e cadastro

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -8,11 +8,11 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-# play.crypto.secret = "changeme"
+play.crypto.secret = "changeme"
 
 # The application languages
 # ~~~~~
-# play.i18n.langs = [ "en" ]
+play.i18n.langs = [ "en" ]
 
 # Router
 # ~~~~~
@@ -26,7 +26,7 @@
 # play.http.router = my.application.Routes
 
 #Configure Models
-# ebean.default = ["models.*"]
+//ebean.default = ["models.*"]
 
 # Database configuration
 # ~~~~~
