--- a/cliente/bower.json
+++ b/cliente/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap": "^1.2.5"
+    "angular-bootstrap": "^1.2.5",
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
