--- a/cliente/bower.json
+++ b/cliente/bower.json
@@ -14,7 +14,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "^1.2.5",
-    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
+    "bootstrap-social": "^4.12.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
