--- a/cliente/bower.json
+++ b/cliente/bower.json
@@ -15,7 +15,10 @@
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "^1.2.5",
     "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
-    "bootstrap-social": "^4.12.0"
+    "bootstrap-social": "^4.12.0",
+    "angular-upload": "^1.0.12",
+    "ng-file-upload-shim": "^12.0.4",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
