--- a/cliente/bower.json
+++ b/cliente/bower.json
@@ -18,7 +18,8 @@
     "bootstrap-social": "^4.12.0",
     "angular-upload": "^1.0.12",
     "ng-file-upload-shim": "^12.0.4",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "angular-translate": "^2.11.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
