--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -26,7 +26,7 @@ play.i18n.langs = [ "en" ]
 # play.http.router = my.application.Routes
 
 #Configure Models
-//ebean.default = ["models.*"]
+ebean.default=["models.*"]
 
 # Database configuration
 # ~~~~~
