--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -33,10 +33,21 @@ ebean.default=["models.*"]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.username=sa
-db.default.password=""
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#db.default.username=sa
+#db.default.password=""
+
+
+db.default.driver="org.postgresql.Driver"
+db.default.url="jdbc:postgresql://localhost:5432/caroname"
+db.default.username = "postgres"
+db.default.password = "senha"
+
+#db.default.driver="com.mysql.jdbc.Driver"
+#db.default.url="jdbc:mysql://localhost:3306/caroname"
+#db.default.username = root
+#db.default.password = "senha"
 
 #Postgres
 #db.default.driver=org.postgresql.Driver
@@ -47,7 +58,7 @@ db.default.password=""
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# play.evolutions.enabled=false
+#play.evolutions.enabled=false
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
